--- a/Imperatur_v2/Imperatur_v2.csproj
+++ b/Imperatur_v2/Imperatur_v2.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="cache\instruments.json" />
+    <EmbeddedResource Include="cache\exchanges.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
