--- a/Imperatur_v2/Imperatur_v2.csproj
+++ b/Imperatur_v2/Imperatur_v2.csproj
@@ -76,12 +76,15 @@
     <Compile Include="securites\Quote.cs" />
     <Compile Include="securites\Security.cs" />
     <Compile Include="shared\Attributes.cs" />
+    <Compile Include="shared\Extensions.cs" />
     <Compile Include="shared\ImperaturGlobal.cs" />
     <Compile Include="shared\LineReader.cs" />
     <Compile Include="shared\ObjectMapping.cs" />
     <Compile Include="shared\ObjectReflection.cs" />
     <Compile Include="shared\ObjectTextSearch.cs" />
     <Compile Include="shared\ObservableRangeCollection.cs" />
+    <Compile Include="trade\analysis\SecurityAnalysis.cs" />
+    <Compile Include="trade\analysis\SecurityAnalysisInterface.cs" />
     <Compile Include="trade\Holding.cs" />
     <Compile Include="trade\HoldingInterface.cs" />
     <Compile Include="trade\Trade.cs" />
