--- a/Imperatur_v2/Imperatur_v2.csproj
+++ b/Imperatur_v2/Imperatur_v2.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -79,6 +81,11 @@
     <Compile Include="securites\HistoricalQuote.cs" />
     <Compile Include="securites\Quote.cs" />
     <Compile Include="securites\Security.cs" />
+    <Compile Include="Service References\SweaWebService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="shared\Attributes.cs" />
     <Compile Include="shared\Extensions.cs" />
     <Compile Include="shared\ImperaturGlobal.cs" />
@@ -97,9 +104,76 @@
   <ItemGroup>
     <EmbeddedResource Include="cache\instruments.json" />
     <EmbeddedResource Include="cache\exchanges.json" />
+    <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.CalendarDay.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.CrossResult.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getAllCrossNamesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getAnnualAverageExchangeRatesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getCalendarDaysResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getCrossRatesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getInterestAndExchangeGroupNamesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getInterestAndExchangeNamesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getInterestAndExchangeRatesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getLatestInterestAndExchangeRatesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.getMonthlyAverageExchangeRatesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.Group.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.GroupSeries.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.Result.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\Imperatur_v2.SweaWebService.Series.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\SweaWebService\swea.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\SweaWebService\SweaService.wsdl" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\SweaWebService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\SweaWebService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\SweaWebService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\SweaWebService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
