--- a/Imperatur Market Client/Imperatur Market Client.csproj
+++ b/Imperatur Market Client/Imperatur Market Client.csproj
@@ -51,6 +51,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="ZedGraph, Version=5.1.7.430, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZedGraph.5.1.7\lib\net35-Client\ZedGraph.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="control\AccountTab.cs">
@@ -186,6 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ipm.ico" />
+    <Content Include="License-LGPL.txt" />
     <None Include="Resources\Expand.png" />
     <None Include="Resources\Collapse.png" />
   </ItemGroup>
