Fix of businessdates

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Imperatur Market Client/bin/Release/%envFolderPath{CommonApplicationData}/imp_
+bin/
