more core changes

--- a/Imperatur Market Core/Imperatur Market Core.csproj
+++ b/Imperatur Market Core/Imperatur Market Core.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="account\Account.cs" />
     <Compile Include="account\AccountHandler.cs" />
     <Compile Include="account\IAccount.cs" />
     <Compile Include="account\IAccountHandler.cs" />
