--- a/Imperatur Market Core/Imperatur Market Core.csproj
+++ b/Imperatur Market Core/Imperatur Market Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="monetary\Currency.cs" />
     <Compile Include="monetary\CurrencyConverterInterface.cs" />
     <Compile Include="monetary\ILogicalTransaction.cs" />
+    <Compile Include="monetary\ILogicalTransactionHandler.cs" />
     <Compile Include="monetary\ITransaction.cs" />
     <Compile Include="monetary\LogicalTransaction.cs" />
     <Compile Include="monetary\Money.cs" />
