--- a/Imperatur Market Core/Imperatur Market Core.csproj
+++ b/Imperatur Market Core/Imperatur Market Core.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="LiteDB, Version=3.0.0.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
       <HintPath>..\packages\LiteDB.3.0.0\lib\net35\LiteDB.dll</HintPath>
       <Private>True</Private>
@@ -70,16 +74,19 @@
     <Compile Include="monetary\LogicalTransactionHandler.cs" />
     <Compile Include="monetary\Money.cs" />
     <Compile Include="monetary\MoneyInterface.cs" />
+    <Compile Include="monetary\SimpleMoney.cs" />
     <Compile Include="monetary\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="securities\ISecurityFromExchange.cs" />
     <Compile Include="securities\ISecurityHandler.cs" />
+    <Compile Include="securities\Security.cs" />
+    <Compile Include="securities\SecurityFromExchange.cs" />
     <Compile Include="securities\SecurityHandler.cs" />
     <Compile Include="shared\ImperaturGlobal.cs" />
     <Compile Include="system\ISystemHandler.cs" />
     <Compile Include="system\SystemHandler.cs" />
     <Compile Include="trade\ITradeHandler.cs" />
     <Compile Include="trade\TradeHandler.cs" />
-    <Compile Include="user\IUser.cs" />
     <Compile Include="user\IUserHandler.cs" />
     <Compile Include="user\User.cs" />
     <Compile Include="user\UserHandler.cs" />
