--- a/Imperatur Market Core/packages.config
+++ b/Imperatur Market Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="LiteDB" version="3.0.0" targetFramework="net452" />
   <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
